Bug fix for backend.css
Footer was overlapping when maken an appointment, with position relative and a margin-top, this is fixed.

--- a/src/assets/css/backend.css
+++ b/src/assets/css/backend.css
@@ -173,10 +173,11 @@ body .modal.full-screen .wrapper {
 
 body .modal.full-screen .modal-footer {
     background-color: #f5f5f5;
-    position: absolute;
+    position: relative;
     bottom: 0;
     width: 100%;
     height: 67px;
+    margin-top: 100px;
 }
 
 body .jspDrag {
